# argus-core

./: Cargo.toml  README.md
crates/analyzer/: Cargo.toml
crates/analyzer/benches/: simulation.rs
crates/analyzer/src/: graph.rs  lib.rs  reporter.rs  simulator.rs
crates/analyzer/src/sink/: json_stream.rs  mod.rs  starrocks.rs
crates/analyzer/tests/: e2e.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  types.rs
crates/provider/: Cargo.toml
crates/provider/src/: labels.rs  lib.rs  prefetcher.rs  rpc.rs  slots.rs
