[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/provider",
    "crates/analyzer",
    "crates/cli",
]

# ============================================================================
# Centralized Dependency Management
# All crate versions are pinned here so that member crates inherit them via
# `workspace = true`, ensuring a single source of truth across the workspace.
# ============================================================================

[workspace.dependencies]
# -- Async Runtime --
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# -- Blockchain Primitives (alloy) --
# We pull in only the sub-crates we need to keep compile times reasonable.
alloy-primitives = "1"
alloy-eips = "1"
alloy-provider = { version = "1", features = ["reqwest"] }
alloy-rpc-types = "1"
alloy-transport-http = "1"

# -- EVM Simulation --
revm = { version = "34", features = [
    "std",
    "alloydb",
    "optional_balance_check",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "optional_eip3607",
] }

# -- Error Handling --
thiserror = "2"

# -- CLI --
clap = { version = "4", features = ["derive", "env"] }

# -- Serialization --
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# -- Logging / Tracing --
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# -- Utilities --
hex = "0.4"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
rayon = "1"
smallvec = { version = "1", features = ["serde"] }
url = "2"
