[package]
name = "argus-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for the Argus Parallel EVM conflict analyzer."

[[bin]]
name = "argus"
path = "src/main.rs"

[dependencies]
argus-core = { path = "../core" }
argus-provider = { path = "../provider" }
argus-analyzer = { path = "../analyzer" }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
